# Eve

src/: CMakeLists.txt  Makefile.common.in  configure
src/autoconf/: aclocal.m4  configure.ac
src/autoconf/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2  traces.3
src/docs/: BUILDING
src/include/: .blockSplit.h.swp  .instrGraph.h.swp  CallGraph.h  augment.h  blockSplit.h  instrGraph.h  main.h
src/lib/: CMakeLists.txt  Makefile
src/lib/augment-rt/: .runtime.cpp.swp  CMakeLists.txt  runtime.bc  runtime.cpp  runtime.ll  runtimeAPI.cpp_xyz
src/lib/callgraphs/: .Delete  CMakeLists.txt  CallGraph.cpp  CallGraph.cpp-Old  Makefile
src/lib/instrGraph/: .augment.cpp.swp  .blockSplit.cpp.swp  .instrGraph.cpp.swp  (+6 more)
src/tools/: CMakeLists.txt  Makefile
src/tools/instrGraph/: .main.cpp.swp  CMakeLists.txt  main.cpp
test/: .run_generic++.swp  run  run_generic++  run_generic.sh  tmp
test/01-simple/: .01-simple.cpp.swp  01-simple.cpp
test/02-more/: .02-more.cpp.swp  02-more.cpp
test/03-thread/: .03-thread.cpp.swp  03-thread-FastV2.cpp  03-thread-SlowV2.cpp  03-threadSlow.cpp  BetterRun-March8.xlsx  RunData.ods  RunData_2_MoreWork.ods
test/04-mm1/: 04-mm1.cpp
test/05-threadAim/: .05-threadAim.cpp.swp  03-thread.cpp  05-threadAim.cpp  05-threadAim.ll  a.out
test/06-manual/: .06-manual.cpp.swp  006-manualOld.cpp  06-manual  06-manual.cpp  06-manual.ll
test/Old/: 03-thread  03-thread-SlowV2  03-threadA  03-threadB  03-threadFast  03-threadSlow  05-threadAim  a.out  cur  cur.gv  cur.ll  modifieCode.ll  modifiedCode.bc  run_generic  workingPDF
(+4 files in other folders)
